changed soem spacing issues with nav bars

--- a/css/index.css
+++ b/css/index.css
@@ -201,7 +201,7 @@ h4{
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: center;
-       
+       padding-right: 60px;
         
     }
 
@@ -345,7 +345,7 @@ h4{
 
 
     a {
-        font-size:10px;
+        font-size: 20px;
         width: 50px;
         padding: 0 auto;
         margin: 0 auto;
